# dori

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
dori/: CMakeLists.txt  dori.natvis
dori/include/: dori.h
dori/include/dori/: vector.h
dori/include/dori/detail/: assert.h  inline.h  opaque_vector.h  traits.h  unsafe.h  vector_caster.h  vector_creator.h  vector_fwd.h  vector_layout.h  vector_maker.h
test/: CMakeLists.txt  logic.cpp  standalone.cpp
